--- a/public/views/footer.html
+++ b/public/views/footer.html
@@ -19,3 +19,24 @@
 </div><!-- /.modal -->
 
 
+
+<div class="modal fade" id="sessionExpireModal" tabindex="-1" aria-labelledby="sessionExpireModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Your session has expired</h4>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    Please log in again
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
