--- a/public/views/header.html
+++ b/public/views/header.html
@@ -13,6 +13,8 @@
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li ng-class='{ active: PAGE === "home"}'><a href="/home"><i class="icon-home icon-white"></i>Home</a></li>
+                <li ng-if="_isLoggedIn" ng-class='{ active: PAGE === "apollo"}'><a href="/apollo"><i class="icon-home icon-white"></i>Apollo</a></li>
+
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
