--- a/public/views/apollo.html
+++ b/public/views/apollo.html
@@ -2,6 +2,7 @@
     <h1>Coffee <small>Ipsum</small> </h1>
 </div>
 
+<!--<button class='btn btn-info' ng-click="clickTest()"> Click </button>-->
 
 <div class="row">
     <div class="col-xs-10 col-xs-offset-1
